feat: PATRON2020-224 add /api/v1/light endpoint with tests and documentation; fix failing frontend tests
